Commit before clean code

--- a/static/contact.css
+++ b/static/contact.css
@@ -1,6 +1,6 @@
 /* Contact us styles*/
 .background{
-    background: url(../static/bg2.jpg) 50% 50% no-repeat;
+    background: url(sources/bg2.jpg) 50% 50% no-repeat;
 }
 
 .contactus{
