--- a/static/signin.css
+++ b/static/signin.css
@@ -1,6 +1,6 @@
 /* Sign In styles*/
 .background{
-    background: url(../static/bg3.jpg) 50% 50% no-repeat;
+    background: url(sources/bg3.jpg) 50% 50% no-repeat;
 }
 
 .signin{
