--- a/templates/error.html
+++ b/templates/error.html
@@ -2,10 +2,7 @@
 
 {% block head %}
   {{ super() }}
-    <style type="text/css">
-    header{ background: none; }
-    body { margin:0; padding: 0; width: 100%; height:100vh; background: url(../static/bg4.jpg) 50% 50% no-repeat; background-size: cover; display: table;}
-  </style>
+  <link rel="stylesheet" href="../static/error.css">
 {% endblock %}
 {% block content %}
     <div class="error">
