--- a/static/base.css
+++ b/static/base.css
@@ -20,7 +20,7 @@ body{
 .background{
     width: 100%;
     height: 876px; /*100vh*/
-    background: url(bg.jpg) no-repeat 50% 50%;
+    background: url(sources/bg.jpg) no-repeat 50% 50%;
     background-size: cover;
     z-index: 0;
 }
@@ -207,154 +207,4 @@ nav ul li a {
     .menu-icon {
         display: block;
     }
-}
-
-
-/* Contact us styles*/
-/*.contactus{
-    border: 1px solid rgba(255,255,255,0.3);
-    border-radius: 5px;
-    margin-top: 80px;
-    margin-bottom: 100px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    align-content: center;
-    transform: translateX(-50%) translateY(-50%);
-}
-
-
-.contact-c{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #ffffff;
-}
-
-.contact-c h1{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    color: #ffffff;
-    font-size: 46px;
-
-}
-
-.form-c{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    text-align: center;
-    margin: 50px;
-}
-.form-c input{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    width: 100%;
-    margin: 20px 0;
-    background: rgba(0,0,0,0);
-    border: none;
-    border-bottom: 1px solid #0078ff;
-
-    color: #a3a3a3;
-}
-
-::-webkit-input-placeholder{
-    color: #EAEAEA;
-    font-size: 12px;
-    letter-spacing: 2px;
-}
-#msg{
-    margin-top: 60px;
-}
-
-.button-c{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    padding: 20px 32px;
-    font-size: 16px;
-    background: #00cccc;
-    border: none;
-    border-radius: 4px;
-    margin-top: 30px;
-    color: #ffffff;
-}*/
-
-/* Sign In and Sign Up styles*/
-/*
-.signin{
-    border: 1px solid rgba(255,255,255,0.3);
-    border-radius: 5px;
-    margin: 20px;
-    padding: 3em;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    align-content: center;
-    transform: translateX(-50%) translateY(-50%);
-    z-index: -1;
-}
-.signin h2{
-    margin-top: 0;
-    color: #ffffff;
-    font-size: 50px;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    text-align: center;
-}
-
-
-.signin form input{
-    margin: 20px 0;
-    display: block;
-    width:320px;
-    height: 50px;
-    background: rgba(0,0,0,0.3);
-    outline: none;
-    border:1px solid rgba(0,0,0,0.5);
-    font-weight: lighter;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 14px;
-    margin-bottom: 10px;
-    padding-left: 10px;
-    border-radius: 5px;
-}
-
-.signin form button{
-    width: 332px;
-    height: 50px;
-    font-size: 16px;
-    background: #000;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    color: #ffffff;
-    border: 0;
-    border-radius: 5px;
-}*/
-
-/* Error */
-.error{
-    border: 3px solid rgba(255,255,255,0.3);
-    border-radius: 5px;
-    margin: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    align-content: center;
-    transform: translateX(-50%) translateY(-50%);
-    z-index: -1;
-}
-
-.error form h1{
-    margin-top: 0;
-    margin-bottom: 0;
-    color: #ffffff;
-    font-size: 50px;
-    padding: 1em;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: bold;
-    text-align: center;
-    background: #000000;
 }
