--- a/static/signin.css
+++ b/static/signin.css
@@ -24,9 +24,24 @@
     font-weight: lighter;
     text-align: center;
 }
+.input-signin{
+    margin: 20px 0;
+    display: block;
+    width:320px;
+    height: 50px;
+    background: rgba(0,0,0,0.3);
+    outline: none;
+    border:1px solid rgba(0,0,0,0.5);
+    font-weight: lighter;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 14px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    border-radius: 5px;
+    color: #ffffff;
+}
 
-
-.signin form input{
+.signin form input bkup{
     margin: 20px 0;
     display: block;
     width:320px;
@@ -52,4 +67,22 @@
     color: #ffffff;
     border: 0;
     border-radius: 5px;
+}
+.btn-signin{
+    width: 332px;
+    height: 50px;
+    font-size: 16px;
+    background: #000;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: lighter;
+    color: #ffffff;
+    border: 0;
+    border-radius: 5px;
+}
+
+.p-signin{
+    color: #ffffff;
+    font-weight: lighter;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 14px;
 }
