--- a/static/signup.css
+++ b/static/signup.css
@@ -1,12 +1,13 @@
 /*Sign Up styles*/
 .background{
-    background: url(sources/bg5.jpg) 50% 50% no-repeat;
+    background: url(sources/bg6.jpg) 50% 50% no-repeat;
 }
 
 .signup{
     border: 1px solid rgba(255,255,255,0.3);
     border-radius: 5px;
     margin: 20px;
+    margin-top: 80px;
     padding: 3em;
     position: absolute;
     top: 50%;
@@ -25,8 +26,7 @@
     text-align: center;
 }
 
-
-.signup form input{
+.input-signup{
     margin: 20px 0;
     display: block;
     width:320px;
@@ -40,9 +40,10 @@
     margin-bottom: 10px;
     padding-left: 10px;
     border-radius: 5px;
+    color: #ffffff;
 }
 
-.signup form button{
+.btn-signup{
     width: 332px;
     height: 50px;
     font-size: 16px;
@@ -53,3 +54,11 @@
     border: 0;
     border-radius: 5px;
 }
+
+.span-signup{
+    color: #ffffff;
+    font-weight: lighter;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 14px;
+}
+
