--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,80 +5,50 @@
 {% endblock %}
 {% block content %}
     <div class="signup">
-        <form>
+        <form method="POST" action="">
+            {{  formpage.hidden_tag()}}
             <h2>Sign Up</h2>
-            <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address"
-                   required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-            <button id="btnSignUp" type="button">Sign up</button>
+            {% if formpage.name.errors %}
+                {{ formpage.name(class="input-signup") }}
+                {% for eroor in formpage.name.errors %}
+                    <span class="span-signup">{{ eroor }}</span>
+                {% endfor %}
+            {% else %}
+                {{ formpage.name(class="input-signup", placeholder="Enter Name") }}
+            {% endif %}
+            {% if formpage.student_no.errors %}
+                {{ formpage.student_no(class="input-signup") }}
+                {% for eroor in formpage.student_no.errors %}
+                    <span class="span-signup">{{ eroor }}</span>
+                {% endfor %}
+            {% else %}
+                {{ formpage.student_no(class="input-signup", placeholder="Student No") }}
+            {% endif %}
+            {% if formpage.email.errors %}
+                {{ formpage.email(class="input-signup") }}
+                {% for eroor in formpage.email.errors %}
+                    <span class="span-signup">{{ eroor }}</span>
+                {% endfor %}
+            {% else %}
+            {{ formpage.email(class="input-signup", placeholder="Enter Email") }}
+            {% endif %}
+            {% if formpage.password.errors %}
+                {{ formpage.password(class="input-signup") }}
+                {% for eroor in formpage.password.errors %}
+                    <span class="span-signup">{{ eroor }}</span>
+                {% endfor %}
+            {% else %}
+                {{ formpage.password(class="input-signup", placeholder ="Enter Password") }}
+            {% endif %}
+            {% if formpage.password_con.errors %}
+                {{ formpage.password_con(class="input-signup") }}
+                {% for eroor in formpage.password_con.errors %}
+                    <span class="span-signup">{{ eroor }}</span>
+                {% endfor %}
+            {% else %}
+            {{ formpage.password_con(class="input-signup", placeholder="Confirm Password") }}
+            {% endif %}
+            {{ formpage.submit(class="btn-signup" ) }}
         </form>
     </div>
 {% endblock %}
-
-
-
-
-
-
-<!--
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Python Flask Bucket List App</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-    <link href="../static/main.css" rel="stylesheet">
-    <script src="../static/js/jquery-3.3.1.min.js"></script>
-    <script src="../static/js/signUp.js"></script>
-</head>
-
-<body>
-
-<div class="container">
-    <div class="header">
-        <nav>
-            <ul class="nav nav-pills pull-right">
-                <li role="presentation"><a href="main">Home</a></li>
-                <li role="presentation"><a href="showSignin">Sign In</a></li>
-                <li role="presentation" class="active"><a href="#">Sign Up</a></li>
-            </ul>
-        </nav>
-        <h3 class="text-muted">Playground</h3>
-    </div>
-
-    <div class="jumbotron">
-        <h1>Bucket List App</h1>
-        <form class="form-signin">
-            <label for="inputName" class="sr-only">Name</label>
-            <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required
-                   autofocus>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address"
-                   required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password"
-                   required>
-
-            <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
-        </form>
-    </div>
-
-
-    <footer class="footer">
-        <p>&copy; Copyrights: Playground 2018 - 2019 POLITO</p>
-    </footer>
-
-</div>
-</body>
-</html>--->
