Listo registro, necesita editarse los nombre y los campos que sobran pero bien

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -35,10 +35,9 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a class="active" href="#">ABOUT</a></li>
-                        <li><a class="active" href="ContactUs">CONTACT</a></li>
-                        <li><a class="active" href="signin">SIGN IN</a></li>
-                        <li><a class="active" href="signup">SIGN UP</a></li>
+                        <li><a class="active" href="userHome">HOME</a></li>
+                        <li><a class="active" href="#">PROFILE</a></li>
+                        <li><a class="active" href="logout">LOG OUT</a></li>
                     </ul>
                 </div>
             </nav>
