Listo registro, necesita editarse los nombre y los campos que sobran pero bien

--- a/static/signin.css
+++ b/static/signin.css
@@ -81,7 +81,7 @@
 }
 
 .p-signin{
-    color: #ffffff;
+    color: red;
     font-weight: lighter;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
