--- a/templates/tennis.html
+++ b/templates/tennis.html
@@ -2,7 +2,7 @@
 
 {% block head %}
   {{ super() }}
-  <link rel="stylesheet" href="../static/userHome.css">
+  <link rel="stylesheet" href="../static/tennis.css">
 {% endblock %}
 {% block content %}
     <div class="home">
