--- a/static/profile.css
+++ b/static/profile.css
@@ -1,13 +1,37 @@
-/*Sign Up styles*/
 .background{
-    background: url(sources/bg6.jpg) 50% 50% no-repeat;
+    background: url(sources/bg5.jpg) 50% 50% no-repeat;
 }
 
-.signup{
+.home{
     border: 1px solid rgba(255,255,255,0.3);
     border-radius: 5px;
     margin: 20px;
-    margin-top: 80px;
+    padding: 1em;
+    margin-top: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    align-content: center;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 1;
+}
+.media{
+    color: white;
+}
+.home h2{
+    margin-top: 0;
+    color: #ffffff;
+    font-size: 25px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: lighter;
+    text-align: center;
+}
+
+.profile{
+    border: 1px solid rgba(255,255,255,0.3);
+    border-radius: 5px;
+    margin: 20px;
     padding: 3em;
     position: absolute;
     top: 50%;
@@ -17,19 +41,11 @@
     transform: translateX(-50%) translateY(-50%);
     z-index: 1;
 }
-.signup h2{
-    margin-top: 0;
-    color: #ffffff;
-    font-size: 50px;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
-    text-align: center;
-}
 
-.input-signup{
+.input-profile{
     margin: 20px 0;
     display: block;
-    width:320px;
+    width: 513.13px;
     height: 50px;
     background: rgba(0,0,0,0.3);
     outline: none;
@@ -41,9 +57,11 @@
     padding-left: 10px;
     border-radius: 5px;
     color: #ffffff;
+    align-content: center;
 }
 
-.btn-signup{
+
+.btn-profile{
     width: 332px;
     height: 50px;
     font-size: 16px;
@@ -55,10 +73,34 @@
     border-radius: 5px;
 }
 
-.span-signup{
+.span-profile{
     color: red;
     font-weight: lighter;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
 }
 
+.form-control-file{
+    color: #ffffff;
+}
+.profile-picture{
+    border-radius: 5px;
+    text-align: left;
+    align-content: center;
+    display: block;
+    background: rgba(0,0,0,0.3);
+    outline: none;
+    border:1px solid rgba(0,0,0,0.5);
+    margin: 20px 0;
+    width: 513.13px;
+    height: 50px;
+    padding-left: 10px;
+    font-weight: lighter;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 14px;
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+.rounded-circle {
+  border-radius: 50% !important;
+}
