--- a/templates/base.html
+++ b/templates/base.html
@@ -35,14 +35,26 @@
                 </div>
                 <div class="menu">
                     <ul>
+                        <li><a class="active" href="soccer">HOME</a></li>
                         <li><a class="active" href="#">ABOUT</a></li>
                         <li><a class="active" href="ContactUs">CONTACT</a></li>
-                        <li><a class="active" href="signin">SIGN IN</a></li>
-                        <li><a class="active" href="signup">SIGN UP</a></li>
+                        {% if current_user.is_authenticated %}
+                            <li><a class="active" href="logout">LOG OUT</a></li>
+                        {% else %}
+                            <li><a class="active" href="signin">SIGN IN</a></li>
+                            <li><a class="active" href="signup">SIGN UP</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
         </header>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <p class="message">{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     {% block footer %}
     <footer class="footer">
