--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
                 <div class="menu">
                     <ul>
                         <li><a class="active" href="soccer">HOME</a></li>
-                        <li><a class="active" href="#">ABOUT</a></li>
+                        <li><a class="active" href="AboutUs">ABOUT</a></li>
                         <li><a class="active" href="ContactUs">CONTACT</a></li>
                         {% if current_user.is_authenticated %}
                             <li><a class="active" href="logout">LOG OUT</a></li>
