--- a/templates/soccer.html
+++ b/templates/soccer.html
@@ -6,18 +6,33 @@
 {% endblock %}
 {% block content %}
     <div class="home">
-    <h1>{{ current_user.name }}</h1>
-    {% for post in posts %}
-        <article class="media content-section">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author }}</a>
-              <small class="text-muted">{{ post.date_posted }}</small>
-            </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
-          </div>
-        </article>
-    {% endfor %}
+    <main>
+               <div class="col col1">
+                    <h2>Games</h2>
+                    {% for post in posts %}
+                        <article class="media content-section">
+                          <div class="media-body">
+                            <div class="article-metadata">
+                              <a class="mr-2" href="#">{{ post.author }}</a>
+                              <small class="text-muted">{{ post.date_posted }}</small>
+                            </div>
+                            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                            <p class="article-content">{{ post.content }}</p>
+                          </div>
+                        </article>
+                    {% endfor %}
+                    <div id="icons">
+                        <a class="active" href="soccer/new_game">CREATE NEW SOCCER GAME</a>
+                    </div>
+               </div>
+               <div class="col col2">
+                    <h2>Teams</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque voluptas excepturi illo cum mollitia, earum libero asperiores. Fugit deserunt, dolorem vero, commodi adipisci voluptatum. At impedit repellat tempore ratione quo sequi. Dicta ex distinctio nulla cumque, quod illum, quisquam ullam voluptate! Non quas consectetur tempore doloremque. Blanditiis vel beatae laudantium molestias quibusdam id, ullam consectetur est asperiores officia dolorem, tempora unde eum. Veniam ad aliquam tempora, repellendus dolor vitae ipsa voluptatum quam qui mollitia voluptas numquam, eaque assumenda, autem, ipsum velit provident veritatis magni iste recusandae fuga. Vero ullam, qui nemo maiores repudiandae, voluptatum obcaecati consequatur illo, voluptates quod facere aut eveniet ex autem nisi, non odit corporis expedita magnam sunt eaque atque. Laborum dicta impedit, repellendus delectus placeat velit praesentium tenetur doloribus, obcaecati et ullam consequatur, a. Rem, voluptatem eius asperiores porro maxime at, illum id corporis a pariatur quasi odit labore quis, aperiam eos eligendi, temporibus expedita? Atque in, quae doloribus maiores dolorem ipsam mollitia quam magnam delectus praesentium sit quidem est facilis, porro officiis hic fugit repellat enim pariatur dignissimos. Eaque, tenetur consequatur. Voluptatum ipsum asperiores at autem nisi ipsam, aliquam possimus, nam, sunt illum repellat. Quo minus maxime enim totam et laudantium iusto odit dolor perferendis!</p>
+               </div>
+
+    </main>
+
+
+
     </div>
 {% endblock %}
