--- a/templates/base2.html
+++ b/templates/base2.html
@@ -43,7 +43,7 @@
 
                 <div class="menu">
                     <ul>
-                        {% if title=='Create Soccer Game' or title== 'Update Game' %}
+                        {% if title=='Create Soccer Game' or title== 'Update Game' or title=='Create Basket Game' %}
                         {% else %}
                         <li><a class="active" href="soccer">SOCCER</a></li>
                         <li><a class="active" href="basket">BASKET</a></li>
