--- a/static/game.css
+++ b/static/game.css
@@ -5,25 +5,40 @@
 .game{
     background: rgba(0, 0, 0, 0.46);
     margin-top: 60px;
-    width: 60%;
-    height: 300px;
+    width: 80%;
+    height: 470px;
     border: 1px solid rgba(255,255,255,0.3);
     border-radius: 5px;
     padding: 3em;
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     text-align: center;
     align-content: center;
     transform: translateX(-50%) translateY(-50%);
     z-index: 1;
 }
+.little-title{
+    font-weight: bold;
+}
 
-.card {
+.article{
+    height: 400px;
+    background: rgba(255, 255, 255, 0.67);
+    margin: 10px;
+    border: 4px solid rgba(36, 52, 203, 0.86);
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.3);
-    padding: 20px;
-    margin-top: 20px;
-    color: #ffffff;
+    overflow-y: scroll;
+}
 
+.btn-game{
+    width: 232px;
+    height: 50px;
+    font-size: 16px;
+    background: #000;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: lighter;
+    color: #ffffff;
+    border: 0;
+    border-radius: 5px;
 }
