--- a/static/soccer.css
+++ b/static/soccer.css
@@ -10,7 +10,7 @@
     border-radius: 5px;
     padding: 3em;
     position: absolute;
-    top: 50%;
+    top: 43%;
     left: 50%;
     text-align: center;
     align-content: center;
@@ -28,6 +28,14 @@ main{
     height: 500px;
     float: left;
     text-align: center ;
+}
+.games{
+    height: 400px;
+    background: rgba(255, 254, 250, 0.48);
+    margin: 10px;
+    border: 1px solid rgba(255,255,255,0.3);
+    border-radius: 5px;
+    overflow-y: scroll;
 }
 
 #icons a {
@@ -61,6 +69,8 @@ main h2{
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: lighter;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -69,4 +79,34 @@ main h2{
         width: 100%;
     }
 
+}
+.square{
+    background: rgba(255, 255, 255, 0.86);
+    color: #000000;
+    width: 97%;
+    border: 4px solid rgba(0, 0, 0, 0.89);
+    border-radius: 5px;
+    padding: 3px;
+    text-align: left;
+
+}
+.link{
+    color: #000000;
+    text-align: left;
+    text-decoration: none;
+}
+main h3{
+    text-align: center;
+    color: black;
+    font-size: 18px;
+    margin: 0;
+}
+main p{
+    text-align: left;
+    color: black;
+    margin:0;
+    font-size: 16px;
+}
+#price{
+    color:red;
 }
