--- a/templates/base2.html
+++ b/templates/base2.html
@@ -38,12 +38,12 @@
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
                 <div class="logo">
-                    <a title="playground" href="/"><img src="../static/sources/logo.png"></a>
+                    <a title="playground" href="/soccer"><img src="../static/sources/logo.png"></a>
                 </div>
 
                 <div class="menu">
                     <ul>
-                        {% if title=='Create Soccer Game' or title== 'Update Game' or title=='Create Basket Game' %}
+                        {% if title=='Create Soccer Game' or title== 'Update Game' or title=='Create Basket Game'or title=='Create Tennis Game' or title=='Create New Team' or title=='Update Team'%}
                         {% else %}
                         <li><a class="active" href="soccer">SOCCER</a></li>
                         <li><a class="active" href="basket">BASKET</a></li>
