--- a/templates/soccer.html
+++ b/templates/soccer.html
@@ -34,10 +34,22 @@
                <div class="col col2">
                     <h2>Teams</h2>
                     <div class="games">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque voluptas excepturi illo cum mollitia, earum libero asperiores. Fugit deserunt, dolorem vero, commodi adipisci voluptatum. At impedit repellat tempore ratione quo sequi. Dicta ex distinctio nulla cumque, quod illum, quisquam ullam voluptate! Non quas consectetur tempore doloremque. Blanditiis vel beatae laudantium molestias quibusdam id, ullam consectetur est asperiores officia dolorem, tempora unde eum. Veniam ad aliquam tempora, repellendus dolor vitae ipsa voluptatum quam qui mollitia voluptas numquam, eaque assumenda, autem, ipsum velit provident veritatis magni iste recusandae fuga. Vero ullam, qui nemo maiores repudiandae, voluptatum obcaecati consequatur illo, voluptates quod facere aut eveniet ex autem nisi, non odit corporis expedita magnam sunt eaque atque. Laborum dicta impedit, repellendus delectus placeat velit praesentium tenetur doloribus, obcaecati et ullam consequatur, a. Rem, voluptatem eius asperiores porro maxime at, illum id corporis a pariatur quasi odit labore quis, aperiam eos eligendi, temporibus expedita? Atque in, quae doloribus maiores dolorem ipsam mollitia quam magnam delectus praesentium sit quidem est facilis, porro officiis hic fugit repellat enim pariatur dignissimos. Eaque, tenetur consequatur. Voluptatum ipsum asperiores at autem nisi ipsam, aliquam possimus, nam, sunt illum repellat. Quo minus maxime enim totam et laudantium iusto odit dolor perferendis!</p>
+                        {% for team in teams %}
+                                <a href="{{ url_for('team',team_id =team.id,sport='soccer')}}" class="link">
+                                    <article class="square">
+                                      <div class="media-body">
+                                        <h3>{{ team.name }}</h3>
+                                        <p>{{ team.description }}</p>
+                                        <small>Max Team Number: {{ team.players_number }}</small><br>
+                                        <small>Vacant:  {{ team.vacant }}</small><br>
+                                        <small>Game Creator: {{ team.begginer.name }}</small>
+                                      </div>
+                                    </article>
+                                </a>
+                        {% endfor %}
                     </div>
                     <div id="icons">
-                        <a class="active" href="#">CREATE NEW TEAM</a>
+                        <a class="active" href="new_team">CREATE NEW TEAM</a>
                     </div>
                 </div>
 
