--- a/templates/base2.html
+++ b/templates/base2.html
@@ -38,7 +38,7 @@
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
                 <div class="logo">
-                    <a title="playground" href="/soccer"><img src="../static/sources/logo.png"></a>
+                    <a title="playground" href="/"><img src="../static/sources/logo.png"></a>
                 </div>
 
                 <div class="menu">
