--- a/templates/game.html
+++ b/templates/game.html
@@ -19,6 +19,8 @@
           <br><small class="little-title">SPORT CENTER:</small>
           <br><small>{{ game.location }}</small>
           <br><small>{{ game.slot }}</small>
+          <br><small class="little-title">PRICE:</small>
+          <br><small>{{ game.price }}</small>
           <br><small class="little-title">MEMBERS:</small>
           <br><small>{{ game.members }}</small>
           <br><small class="little-title">CREATOR:</small>
