--- a/templates/new_team.html
+++ b/templates/new_team.html
@@ -15,7 +15,7 @@
                     <p class="p-signin">{{ error }}</p>
                 {% endfor %}
             {% else %}
-                {{ formpage.name(class="input-team", placeholder="Game Title")}}
+                {{ formpage.name(class="input-team", placeholder="Team Title")}}
             {% endif %}
             {% if formpage.description.errors %}
                 {{ formpage.description(class="input-team") }}
