--- a/templates/soccer.html
+++ b/templates/soccer.html
@@ -18,7 +18,7 @@
                                         <p>{{ game.description }}</p>
                                         <small>{{ game.location }}</small>
                                         <small>{{ game.slot }}</small><br>
-                                        <small>{{ game.price }}</small>
+                                        <small>Price:  </small>
                                         <small id="price">{{ game.price }}</small>
                                         <small>Vacant:  {{ game.vacant }}</small><br>
                                         <small>Game Creator: {{ game.creator.name }}</small>
