--- a/templates/team.html
+++ b/templates/team.html
@@ -22,6 +22,7 @@
           <br><small>{{ team.members }}</small>
           <br><small class="little-title">FOUNDER:</small>
           <br><small>{{ team.begginer.name }}</small>
+          <br><a title="Just for members" class="link" href={{ link }}>team chat only for members</a>
         </div>
       {% if flag == 0 %}
       {{ formpage.submit(class="btn-team") }}
