--- a/static/new_game_b.css
+++ b/static/new_game_b.css
@@ -14,6 +14,7 @@
     transform: translateX(-50%) translateY(-50%);
     position: absolute;
     z-index: 1;
+    width: 60%;
 }
 
 .newgame h2{
@@ -61,4 +62,16 @@
     color: #ffffff;
     border: 0;
     border-radius: 5px;
+}
+.col1{
+    width: 540px;
+    height: 400px;
+    float: left;
+    text-align: center ;
+}
+.col2{
+    width: 30%;
+    height: 400px;
+    float: left;
+    text-align: center ;
 }
