--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% if title %}
-    <title>{{ title }} Page</title>
+    <title>{{ title }}</title>
     {% else %}
     <title>Playground</title>
     {% endif %}
